# solarCalculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/solarCalculator/: location.hpp  sun.hpp
python/: plocation.cpp  psolarCalculator.cpp  psun.cpp  unit_tests.py
python/include/: plocation.hpp  psun.hpp
src/: location.cpp  sun.cpp
testing/: location.cpp  sun.cpp  time.cpp
